# POO-con-Cpp-Python

./: README.md  filtro_ir_dep.py  main  main.cpp
.cache/clangd/index/: main.cpp.D24786BCD4DFC759.idx
ejemplo1cpp/: Vehiculo.cpp  Vehiculo.h  main.cpp  myprogram
ejemplo2_opencv/: CMakeLists.txt  main.cpp
ejemplo2python/: Vehiculo.py  main.py
ejemplo3_opencv/: CMakeLists.txt  main.cpp
ejemplo_CMake/: CMakeLists.txt  main.cpp
ejemplo_opencv/: CMakeLists.txt  main.cpp
finger-tracker-opCV/: CMakeLists.txt  main.cpp  main.py  main.txt
gradient_descent_ex/: grad_desc_ex1.py  grad_desc_ex2.py
gradient_descent_ex/multi_sal/: main.py  multonn.py
qml-qt/QObject-memoriadin/QObject-md-parent/: CMakeLists.txt  main.cpp  objetoex.cpp  objetoex.h
qml-qt/positioners-layouts-items/positioner-layouts-items/: CMakeLists.txt
qml-qt/prueba-qml-ui/prueba-ui-qml/: CMakeLists.txt  main.cpp
qml-qt/signal-slots/: CMakeLists.txt  Firefox.cpp  InternetExplorer.h  README.md  UserInteractor.cpp  main.cpp
qml-qt/signal-slots/Header files/: Firefox.h  InternetExplorer.h  UserInteractor.h
qml-qt/signal-slots/Source Files/: Firefox.cpp  InternetExplorer.cpp  UserInteractor.cpp  main.cpp
qml-qt/signals-slots-qt/signals-slots-qt/: CMakeLists.txt  Firefox.cpp  Firefox.h  InternetExplorer.cpp  InternetExplorer.h  UserInteractor.cpp  UserInteractor.h  main.cpp
redesn_multicapa/: RNmulti.py  main.py
